# invariant-protocol

./: .gitattributes  .gitignore  GTM.md  GUARDIAN_FIRST_STRATEGY.md  LICENSE  README.md  SILO_OUTREACH.md  START_HERE.md
contracts/: CoverageVault.sol  IVPGuardian.sol  IVPGuardianRegistry.sol  IVPToken.sol  InvariantRegistry.sol  MockEpochManager.sol  ProverRegistry.sol  README.md  SiloGuardianAdapter.sol
contracts/interfaces/: IIVPGuardian.sol
demo/: bridge-event-integrity-walkthrough.md
examples/: bridge_event_integrity.isl  lending_ltv_bitmap.isl  mulDiv_rounding_conservation.isl  stablecoin_ghost_shares.isl
findings/: IVP-001-aave-emode-ltv-desync.md  IVP-002-monolith-ghost-share.md  IVP-003-swft-event-integrity.md  euler-retroactive.md
invariant-library/bridge/: bridge.isl
invariant-library/dex/: dex.isl
invariant-library/governance/: governance.isl
invariant-library/lending/: lending.isl  monolith-lender.isl
invariant-library/stablecoin/: stablecoin.isl
ivp-prover/: Cargo.toml
ivp-prover/lib/: Cargo.toml
ivp-prover/lib/src/: lib.rs
ivp-prover/program/: Cargo.toml
ivp-prover/program/src/: main.rs
ivp-prover/script/: Cargo.toml
logs/: guardian-operations.csv
playground/: index.html
scripts/: deploy-guardian-first.sh  silo-state-reader.js
site/: index.html  pricing.html
specs/: ISL.md  coverage-semantics.md  guardian-integration.md  proof-lifecycle.md  spot-checker-cryptography.md
