[package]
version = "0.1.0"
name = "ivp-script"
edition = "2021"
default-run = "ivp"

[[bin]]
name = "ivp"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
ivp-lib = { path = "../lib" }
dotenv = "0.15.0"
sha3.workspace = true

[build-dependencies]
sp1-build = { version = "6.0.1" }
sha3 = { workspace = true }
